# private-publication

./: Cargo.toml  DESIGN.md  EXERCISES.md  README.md  default.nix  holochain_version.nix  package-lock.json  package.json
.github/workflows/: test.yml
crates/membrane_proof/: Cargo.toml
crates/membrane_proof/src/: lib.rs
dnas/lobby/coordinator_zomes/private_publication_lobby/: Cargo.toml
dnas/lobby/coordinator_zomes/private_publication_lobby/src/: entry_def_0.rs  lib.rs
dnas/lobby/coordinator_zomes/profiles/: Cargo.toml
dnas/lobby/coordinator_zomes/profiles/src/: lib.rs  profile.rs
dnas/lobby/integrity_zomes/private_publication_lobby/: Cargo.toml
dnas/lobby/integrity_zomes/private_publication_lobby/src/: lib.rs
dnas/lobby/integrity_zomes/profiles/: Cargo.toml
dnas/lobby/integrity_zomes/profiles/src/: lib.rs
dnas/lobby/integrity_zomes/profiles/src/profile/: definition.rs
dnas/lobby/workdir/: dna.yaml
dnas/private_publication/coordinator_zomes/posts/: Cargo.toml
dnas/private_publication/coordinator_zomes/posts/src/: lib.rs  post.rs
dnas/private_publication/coordinator_zomes/roles/: Cargo.toml
dnas/private_publication/coordinator_zomes/roles/src/: lib.rs  role.rs
dnas/private_publication/integrity_zomes/private_publication/: Cargo.toml
dnas/private_publication/integrity_zomes/private_publication/src/: lib.rs  membrane.rs  post.rs  properties.rs  publication_role.rs  validation.rs
dnas/private_publication/workdir/: dna.yaml
nix/: sources.json
tests/: package.json
tests/src/: grant.ts  index.ts  invite.ts  utils.ts
tests/src/lobby/private_publication_lobby/: entry_def_0.ts
tests/src/lobby/profiles/: profile.ts
tests/src/private_publication/posts/: post.ts
tests/src/private_publication/roles/: role.ts
ui/: package.json
ui/src/: holochain-app.ts
ui/src/components/lobby/private_publication_lobby/: create-entry-def-0.ts  entry-def-0-detail.ts
ui/src/components/lobby/profiles/: create-profile.ts  profile-detail.ts
ui/src/components/private_publication/posts/: create-post.ts  post-detail.ts
ui/src/components/private_publication/roles/: create-role.ts  role-detail.ts
ui/src/types/private_publication/: roles.ts
workdir/: happ.yaml  web-happ.yaml
workdir/progenitor/: happ.yaml
