[package]
edition = "2021"
name = "private_publication_lobby_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "private_publication_lobby_integrity"

[dependencies]
derive_more = "0"
serde = "1"

hdi = "0.0.14"
private_publication_lobby_integrity = {git = "https://github.com/holochain-immersive/zomes", branch = "main"}
