[package]
edition = "2021"
name = "private_publication_lobby_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "private_publication_lobby_integrity"

[dependencies]
derive_more = "0"
serde = "1"

hdi = { workspace = true }
private_publication_lobby_integrity = { git = "https://github.com/holochain-immersive/zomes", branch = "main" }
membrane_proof = { path = "../../../../crates/membrane_proof" }
