[package]
edition = "2021"
name = "roles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "roles"

[dependencies]
serde = "1"
derive_more = "0"
private_publication_integrity = { path = "../../integrity_zomes/private_publication" }

hdk = "0.0.142"
roles = {git = "https://github.com/holochain-immersive/zomes", branch = "main"}
