[package]
edition = "2021"
name = "private_publication_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "private_publication_integrity"

[dependencies]
derive_more = "0"
serde = "1"

hdi = { workspace = true }
membrane_proof = { path = "../../../../crates/membrane_proof" }
private_publication_integrity = { git = "https://github.com/holochain-immersive/zomes", branch = "main" }

[features]
exercise = []
exercise1 = ["exercise"]
exercise2 = []
